# RusticOS

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
common/: Cargo.toml
font/: pngtofont.py
kernel/: Cargo.toml
kernel/src/: draw.rs  drawstr.rs  font.rs  main.rs  memory.rs  pci.rs  vga.rs  xHCI.rs
kernel/src/arch/x86_64/: apic.rs  gdt.rs  getsysteminfo.rs  idt.rs  mod.rs  timer.rs
kernel/src/dwm/: draw.rs  font.rs  main.rs  manager.rs  mod.rs  window.rs
user/apps/calc/: Cargo.toml
user/libuser/: Cargo.toml
